[package]
name = "xxzxka"
license = "MIT"
version = "0.1.0"
edition = "2021"
authors= ["panpan"]
description = "Hello,xxzxka!"
documentation = "https://docs.rs/bitflags"
repository = "https://github.com/rust-lang/cargo/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
